2018-04-02 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #84076: Honour TS setup delete = 0
	* Resolves #84077: Language label overrides for select fields not respected in forms

2018-02-09 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #83833: Salutation does not match in registration and response for "Ms" and "Mrs"
	* Resolves #77055: Password again may be entered alone without error being raised
	* Resolves #65630: Enable HTML5 input types
	* Update version to 5.1.0

2018-02-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #76119: Profile or password editing fails
	* Resolves #80409: Error in updateMMRelations with direct mail categories
	* Resolves #36192: When using captcha extension, captcha evaluation always fails
	* Resolves #81927: Removal of line breaks in plain text mails results in difficult to read mail body
	* Resolves #73532: Filled required field reported as missing on edit form

2018-02-07 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #83799: Remove unused hidden fields from password editing form
	* Resolves #82874: Gender is not shown on preview
	* Resolves #82992: Overwriting a gender label removes the other gender labels
	* Resolves #82614: Custom field radio button label in preview and emails empty
	* Resolves #81844: HTML email gets HTML conditional comments for Outlook removed
	* Resolves #81843: HTML email has same images embedded multiple times
	* Resolves #81443: overrideValues has no effect if field is not in the HTML form

2017-08-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #81963: renderType missing on fe_users status and fe_groups_language_overlay select fields

2017-05-29 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #81365: Missing button labels in labels list
	* Resolves #81367: Call to incorrect query builder function
	* Resolves #81369: Unsubscribe link from Direct Mail fails
	* Resolves #81370: Input fields of type number or email not handled correctly