@@ -1,6 +1,7 @@
 2018-04-02 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #84076: Honour TS setup delete = 0
 	* Resolves #84077: Language label overrides for select fields not respected in forms
+	* Resolves #84087: Required custom radio field not validated correctly
 
 2018-02-09 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #83833: Salutation does not match in registration and response for "Ms" and "Mrs"
